auth and zoom support updates
